# asciicker-xpedit

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  CODEX.md  Dockerfile  Makefile  PLAYWRIGHT_FAILURE_LOG.md  PLAYWRIGHT_STATUS.md  PLAYWRIGHT_TESTS_QUICKSTART.md  PLAYWRIGHT_TEST_REPORT.md  README.md  TEST_EXECUTION_GUIDE.md  justfile  package-lock.json  package.json  playwright.config.js  progress.md  pyproject.toml  sprite-variants  wsgi.py
.githooks/: pre-commit
config/: template_registry.json
deploy/: .env.example  Caddyfile  README.md  nginx.conf
docs/: 2026-03-10-DELIVERABLE-AUDIT-REPORT.md  2026-03-10-EXECUTION-SUMMARY-GAP-CLOSURE.md  2026-03-10-branch-consolidation-plan.md  2026-03-10-readonly-investigation-rexpaint-state.md  2026-03-11-CLAUDE-HANDOFF-CURRENT-STATE.md  2026-03-13-CLAUDE-HANDOFF-EDITOR-DOC-ALIGNMENT.md  2026-03-14-CLAUDE-HANDOFF-XP-FIDELITY-PLAN.md  2026-03-14-CLAUDE-HANDOFF-XP-FIDELITY-TASK6-PLAYWRIGHT.md  2026-03-14-CLAUDE-HANDOFF-XP-NEW-XP-FLOW.md  2026-03-15-CLAUDE-HANDOFF-B6-WHOLE-SHEET-INTEGRATION.md  2026-03-15-CLAUDE-HANDOFF-FOUR-AUDITS-XP-EDITOR.md  2026-03-15-CLAUDE-HANDOFF-WHOLE-SHEET-REXPAINT-PIVOT.md  2026-03-17-CLAUDE-HANDOFF-WHOLE-SHEET-STROKE-PATH.md  2026-03-20-CLAUDE-HANDOFF-PHASE-4-ACCEPTANCE-STRICT.md  2026-03-21-CLAUDE-HANDOFF-M2-PNG-VERIFIER-DESIGN.md  AGENT_PROTOCOL.md  API_CONTRACT.md  ARCHITECTURE.md  BASE_PATH_SUPPORT_CHECKLIST.md  CLAUDE_HANDOFF_ASCIIID_TERMPP_PARITY_NO_RUNTIME_DEPS_2026-02-27.md  CLAUDE_RESEARCH_DUMP_WORKBENCH_MOVE_FREEZE_2026-02-27.md  COMPLETE_AUDIT_MASTER_REPORT.md  (+32 more)
(+248 files in other folders)
